add_button to second_page.html

--- a/second_page.html
+++ b/second_page.html
@@ -42,5 +42,8 @@
             </div>
         </div>
     </div>
+    <div align="center">
+        <a href="/index.html"> Первая страница</a>
+    </div>
 </body>
 </html>
